# pyllelize

./: pyproject.toml
.github/workflows/: python-poetry.yml
