[tool.poetry]
name = "pyllelize"
version = "0.1.0"
description = ""
authors = ["Jamal S <jsaied99@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jsaied99/pyllelize"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
